<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="4dp"
    tools:context="nl.tudelft.cs4160.trustchain_android.main.TrustChainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_external_ip" />

        <TextView
            android:id="@+id/my_external_ip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_local_ip" />

        <TextView
            android:id="@+id/my_local_ip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/connect_to" />

        <EditText
            android:id="@+id/destination_IP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/connect_ip_hint" />

        <EditText
            android:id="@+id/destination_port"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_port" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/messageEditText"
                android:layout_weight="1"
                android:hint="Message Text"
                android:layout_width="wrap_content"
                android:textColor="@android:color/black"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/connection_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:onClick="onClickConnect"
                android:text="@string/connect" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:visibility="gone"
                android:id="@+id/bluetooth_connection_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bluetooth_button" />

            <Button
                android:id="@+id/reset_database_button"
                android:onClick="onClickReset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset_database_button"/>
        </LinearLayout>

        <android.widget.ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context="nl.tudelft.cs4160.trustchain_android.chainExplorer.ChainExplorerActivity">

            <TextView
                android:id="@+id/status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </android.widget.ScrollView>

</LinearLayout>


</android.support.constraint.ConstraintLayout>