<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/myCoordinatorLayout"
    android:fitsSystemWindows="true"
    tools:context=".main.OverviewConnectionsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="0dp"
        android:paddingTop="8dp">


        <TableLayout
            android:id="@+id/overviewButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <TableRow>

                <TextView
                    android:layout_weight="1"
                    android:text="@string/local_ip" />

                <TextView
                    android:id="@+id/local_ip_address_view"
                    android:layout_weight="1"
                    android:text="@string/ip" />

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_weight="1"
                    android:text="@string/wan_address" />

                <TextView
                    android:id="@+id/wanvote"
                    android:layout_weight="1"
                    android:text="@string/unknown" />

            </TableRow>

            <TableRow>


                <TextView
                    android:layout_weight="1"
                    android:text="@string/peer_id" />

                <TextView
                    android:id="@+id/peer_id"
                    android:layout_weight="1"
                    android:text="" />

            </TableRow>

            <TableRow android:layout_marginBottom="10dp">

                <TextView
                    android:layout_weight="1"
                    android:text="@string/connection" />

                <TextView
                    android:id="@+id/connection_type"
                    android:layout_weight="1"
                    android:text="" />
            </TableRow>


            <TableRow android:layout_marginBottom="10dp">

                <TextView
                    android:layout_weight="1"
                    android:text="@string/left_connections"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <TextView
                    android:layout_weight="1"
                    android:text="@string/right_connections"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />
            </TableRow>

            <!--
                    <TableRow>

                        <TextView
                            android:layout_weight="0.33"
                            android:text="@string/active_peers"
                            android:textAlignment="center" />

                        <TextView
                            android:layout_weight="0.33"
                            android:text="@string/connectable_peers"
                            android:textAlignment="center" />

                        <TextView
                            android:layout_weight="0.33"
                            android:text="@string/connectable_ratio"
                            android:textAlignment="center" />
                    </TableRow>

                    <TableRow android:layout_marginBottom="10dp">

                        <TextView
                            android:id="@+id/active_peers"
                            android:layout_weight="0.33"
                            android:text=""
                            android:textAlignment="center"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/connectable_peers"
                            android:layout_weight="0.33"
                            android:text=""
                            android:textAlignment="center"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/connectable_ratio"
                            android:layout_weight="0.33"
                            android:text=""
                            android:textAlignment="center"
                            android:textStyle="bold" />
                    </TableRow>

                    <TableRow>

                        <TextView
                            android:layout_weight="1"
                            android:text="@string/incoming"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_weight="1"
                            android:text="@string/outgoing"
                            android:textStyle="bold" />

                    </TableRow>-->
        </TableLayout>

        <Button
            android:id="@+id/exit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/exit_prompt"
            android:visibility="gone" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ListView
                android:id="@+id/incoming_peer_connection_list_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5" />


            <ListView
                android:id="@+id/outgoing_peer_connection_list_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="45dp"
                android:background="@color/colorPrimary"
                android:onClick="onClickOpenInbox"
                android:text="@string/inbox"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>